<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mylayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.akshathakadri.knowyourgovernment.OfficialActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/office"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/offlocation" />

            <TextView
                android:id="@+id/fullname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/office" />

            <TextView
                android:id="@+id/party"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullname" />

            <ImageView
                android:id="@+id/officialImage"
                android:layout_width="0dp"
                android:layout_height="162dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/background_light"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/party"
                app:srcCompat="@drawable/missingimage" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="75dp"
                android:layout_height="27dp"
                android:layout_marginStart="16dp"
                android:text="@string/address"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/address"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/address"
                android:layout_width="280dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/officialImage" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="72dp"
                android:layout_height="19dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/phone"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/phone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="280dp"
                android:layout_height="22dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="73dp"
                android:layout_height="23dp"
                android:layout_marginLeft="16dp"
                android:text="@string/email"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/email"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/email"
                android:layout_width="280dp"
                android:layout_height="33dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="76dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:text="@string/website"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/web"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/web"
                android:layout_width="280dp"
                android:layout_height="43dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <ImageView
                android:id="@+id/youtube"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="16dp"
                android:onClick="youTubeClicked"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/google"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/web"
                app:srcCompat="@drawable/youtube" />

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="false"
                android:cropToPadding="true"
                android:onClick="facebookClicked"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/twitter"
                app:layout_constraintTop_toBottomOf="@+id/web"
                app:srcCompat="@drawable/facebook" />

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:onClick="twitterClicked"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/facebook"
                app:layout_constraintStart_toEndOf="@+id/google"
                app:layout_constraintTop_toBottomOf="@+id/web"
                app:srcCompat="@drawable/twitter" />

            <ImageView
                android:id="@+id/google"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="16dp"
                android:onClick="googlePlusClicked"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/twitter"
                app:layout_constraintStart_toEndOf="@+id/youtube"
                app:layout_constraintTop_toBottomOf="@+id/web"
                app:srcCompat="@drawable/googleplus" />

            <TextView
                android:id="@+id/offlocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/location"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
